--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -46,7 +46,8 @@ test:
     {% endfor %}
     - test -f ${PREFIX}/include/bzlib.h  # [unix]
     - test -f ${PREFIX}/lib/libbz2.a  # [unix]
-    - test -f ${PREFIX}/lib/libbz2.so  # [unix]
+    - test -f ${PREFIX}/lib/libbz2.so  # [linux]
+    - test -f ${PREFIX}/lib/libbz2.dylib  # [osx]
     - if not exist %LIBRARY_INC%\\bzlib.h exit 1  # [win]
     - if not exist %LIBRARY_LIB%\\bzip2.lib exit 1  # [win]
     - if not exist %LIBRARY_BIN%\\bzip2.dll exit 1  # [win]
