--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,5 @@
 {% set version = "1.0.6" %}
 
-
 package:
   name: bzip2
   version: {{ version }}
@@ -11,18 +10,15 @@ source:
   md5: 00b516f4704d4a7cb50a1d97e6e8e15b
 
 build:
-  number: 3
+  number: 2
+  run_exports:
+    - {{ pin_subpackage('bzip2') }}
 
 requirements:
   build:
     - {{ compiler('c') }}
-  host:
-    - {{ compiler('c') }}
-  host:
 
 test:
-  requires:
-    - python {{ os.environ.get('PY_VER', '') + '*' }}  # [win]
   commands:
     - bzip2 --help  # [unix]
     {% set bzip2_executables = [
