--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -6,7 +6,7 @@ package:
 
 source:
   fn: bzip2-{{ version }}.tar.gz
-  url: http://www.bzip.org/{{ version }}/bzip2-{{ version }}.tar.gz
+  url: https://fossies.org/linux/misc/bzip2-{{ version }}.tar.gz
   md5: 00b516f4704d4a7cb50a1d97e6e8e15b
 
 build:
