Create a libbz2.so.1 symlink
The soname of Bzip2 is libbz2.so.1.0, so this is what tools should use
when linking against bz2. However, some tools incorrectly use
"libbz2.so.1". By providing this symlink, we can make them work.

(Apparently, using a soname with major.minor is somewhat unusual and the
normal way would indeed have been to use libbz2.so.1.)

Debian does this as well in their bzip2 package, see
https://salsa.debian.org/debian/bzip2/blob/0c9335755bcd9519bfc36cf57eb987603b013f46/debian/rules#L73

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,7 +14,7 @@ source:
     - bzip2recover-CVE-2016-3189.patch
 
 build:
-  number: 1002
+  number: 1003
   run_exports:
     - {{ pin_subpackage('bzip2') }}
 
@@ -46,6 +46,8 @@ test:
     - test -f ${PREFIX}/include/bzlib.h  # [unix]
     - test -f ${PREFIX}/lib/libbz2.a  # [unix]
     - test -f ${PREFIX}/lib/libbz2.so  # [linux]
+    - test -f ${PREFIX}/lib/libbz2.so.1  # [linux]
+    - test -f ${PREFIX}/lib/libbz2.so.1.0  # [linux]
     - test -f ${PREFIX}/lib/libbz2.dylib  # [osx]
     - if not exist %LIBRARY_INC%\\bzlib.h exit 1  # [win]
     - if not exist %LIBRARY_LIB%\\bzip2.lib exit 1  # [win]
