MNT: Re-rendered with conda-smithy 3.2.2 and pinning 2019.01.09

--- a/.ci_support/linux_c_compilergcctarget_platformlinux-64.yaml
+++ b/.ci_support/linux_c_compilergcctarget_platformlinux-64.yaml
@@ -1,13 +1,15 @@
 build_number_decrement:
-- '1000'
+- '0'
 c_compiler:
-- toolchain_c
+- gcc
 channel_sources:
-- conda-forge,defaults
+- conda-forge/label/gcc7,defaults
 channel_targets:
-- conda-forge main
+- conda-forge gcc7
 docker_image:
-- condaforge/linux-anvil
+- condaforge/linux-anvil-comp7
+target_platform:
+- linux-64
 zip_keys:
 - - c_compiler
   - channel_sources
