--- a/.ci_support/linux_c_compilertoolchain_ctarget_platformlinux-64.yaml
+++ b/.ci_support/linux_c_compilertoolchain_ctarget_platformlinux-64.yaml
@@ -1,5 +1,3 @@
-MACOSX_DEPLOYMENT_TARGET:
-- '10.9'
 build_number_decrement:
 - '1000'
 c_compiler:
@@ -8,12 +6,13 @@ channel_sources:
 - conda-forge,defaults
 channel_targets:
 - conda-forge main
-macos_machine:
-- x86_64-apple-darwin13.4.0
-macos_min_version:
-- '10.9'
+docker_image:
+- condaforge/linux-anvil
+target_platform:
+- linux-64
 zip_keys:
 - - c_compiler
   - channel_sources
   - channel_targets
+  - docker_image
   - build_number_decrement
