--- a/.ci_support/osx_c_compilertoolchain_ctarget_platformosx-64.yaml
+++ b/.ci_support/osx_c_compilertoolchain_ctarget_platformosx-64.yaml
@@ -1,17 +1,19 @@
 MACOSX_DEPLOYMENT_TARGET:
 - '10.9'
 build_number_decrement:
-- '0'
+- '1000'
 c_compiler:
-- clang
+- toolchain_c
 channel_sources:
-- conda-forge/label/gcc7,defaults
+- conda-forge,defaults
 channel_targets:
-- conda-forge gcc7
+- conda-forge main
 macos_machine:
 - x86_64-apple-darwin13.4.0
 macos_min_version:
 - '10.9'
+target_platform:
+- osx-64
 zip_keys:
 - - c_compiler
   - channel_sources
