--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,14 +1,12 @@
 {% set version = "1.0.8" %}
 
-
 package:
   name: bzip2
   version: {{ version }}
 
 source:
-  fn: bzip2-{{ version }}.tar.gz
-  url: https://fossies.org/linux/misc/bzip2-{{ version }}.tar.gz
-  md5: 67e051268d0c475ea773822f7500d0e5
+  url: https://sourceware.org/pub/bzip2/bzip2-{{ version }}.tar.gz
+  sha256: ab5a03176ee106d3f0fa90e381da478ddae405918153cca248e682cd0c4a2269
   patches:
     - 0001-cross.patch
     - bzip2recover-CVE-2016-3189.patch
