MNT: Re-rendered with conda-build 3.18.9, conda-smithy 3.4.5, and conda-forge-pinning 2019.09.08

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,6 +1,1 @@
-* @jakirkham
-* @jjhelmus
-* @jlanga
-* @mingwandroid
-* @msarahan
-* @pelson
+* @jakirkham @jjhelmus @jlanga @mingwandroid @msarahan @pelson
