--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -56,7 +56,7 @@ about:
   home: http://www.bzip.org/
   license_family: BSD
   license_file: LICENSE
-  license: bzip2
+  license: bzip2-1.0.6
   summary: high-quality data compressor
   description: |
     Bzip2 is a freely available high-quality data compressor. It typically
