--- a/.ci_support/win_arm64_.yaml
+++ b/.ci_support/win_arm64_.yaml
@@ -4,5 +4,7 @@ channel_sources:
 - conda-forge
 channel_targets:
 - conda-forge main
+github_actions_labels:
+- self-hosted
 target_platform:
 - win-arm64
