--- a/.github/workflows/conda-build.yml
+++ b/.github/workflows/conda-build.yml
@@ -3,7 +3,7 @@
 # -*- mode: yaml -*-
 
 name: Build conda package
-on: ['push']
+on: ['push', 'pull_request']
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.sha }}
   cancel-in-progress: true
