--- a/.github/workflows/conda-build.yml
+++ b/.github/workflows/conda-build.yml
@@ -76,7 +76,7 @@ jobs:
         ./.scripts/run_osx_build.sh
 
     - name: Install Miniconda for windows
-      uses: conda-incubator/setup-miniconda@v2
+      uses: conda-incubator/setup-miniconda@main
       with:
         miniforge-version: latest
         miniforge-variant: Mambaforge
