--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -2,11 +2,11 @@ build_platform:
   linux_aarch64: linux_64
   linux_ppc64le: linux_64
   osx_arm64: osx_64
-  win_arm64: win_64
+  win_arm64: win_arm64
 github_actions:
   self_hosted: true
 provider:
-  win_64: github_actions
+  win_arm64: github_actions
 conda_forge_output_validation: true
 test_on_native_only: true
 github:
