--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -8,9 +8,9 @@ source:
   url: https://gitlab.com/bzip2/bzip2/-/archive/bzip2-{{ version }}/bzip2-bzip2-{{ version }}.tar.gz
   sha256: db106b740252669664fd8f3a1c69fe7f689d5cd4b132f82ba82b9afba27627df
   patches:
-    - 0001-cross.patch
-    - 0002-Windows-Make-library-name-lowercase.patch
-    - 0003-Windows-Add-dyn-lib-build-rename-libbz2_static.patch
+    - patches/0001-cross.patch
+    - patches/0002-Windows-Make-library-name-lowercase.patch
+    - patches/0003-Windows-Add-dyn-lib-build-rename-libbz2_static.patch
 
 build:
   number: 8
